webhook/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cacerts-webhook
  namespace: csi-driver-cacerts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cacerts-webhook
  template:
    metadata:
      labels:
        app: cacerts-webhook
        spiffe.io/spire-managed-identity: "true"
    spec:
      serviceAccountName: cacerts-webhook
      containers:
        - name: webhook
          image: fengyu225/cacerts-webhook:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: spiffe-certs
              mountPath: /etc/webhook/certs
        - name: spiffe-helper
          image: docker.io/fengyu225/spiffe-helper:v0.0.1
          imagePullPolicy: Always
          args:
            - -config
            - /etc/spiffe-helper/helper.conf
          volumeMounts:
            - name: spiffe-helper-config
              mountPath: /etc/spiffe-helper
            - name: spire-agent-socket
              mountPath: /run/spire/agent-sockets
            - name: spiffe-certs
              mountPath: /run/spiffe/certs
      volumes:
        - name: spire-agent-socket
          hostPath:
            path: /run/spire/agent-sockets
            type: Directory
        - name: spiffe-helper-config
          configMap:
            name: webhook-spiffe-helper-config
        - name: spiffe-certs
          emptyDir: {}
