webhook/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cacerts-webhook
  namespace: csi-driver-cacerts
spec:
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: webhook
  selector:
    app: cacerts-webhook
