webhook/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cacerts-webhook
webhooks:
  - name: webhook.cacerts.csi.cert-manager.io
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Ignore
    clientConfig:
      service:
        name: cacerts-webhook
        namespace: csi-driver-cacerts
        path: "/mutate"
        port: 8443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQxVENDQXIyZ0F3SUJBZ0lRVUlDVE5ZbzFLdUVtczVuUUhUVXlqVEFOQmdrcWhraUc5dzBCQVFzRkFEQjAKTVFzd0NRWURWUVFHRXdKVlV6RWRNQnNHQTFVRUNoTVVSWGhoYlhCc1pTQlBjbWRoYm1sNllYUnBiMjR4RkRBUwpCZ05WQkFNVEMyVjRZVzF3YkdVdWIzSm5NVEF3TGdZRFZRUUZFeWN4TURjd01EVTRNemswTVRZM05qTXlPRFEzCk16WTRNREl6TVRRM01EazNOVGd4T1RRek1UY3dIaGNOTWpVd01USTNNRFV3TXpBNVdoY05NalV3TVRJNU1EVXcKTXpFNVdqQjBNUXN3Q1FZRFZRUUdFd0pWVXpFZE1Cc0dBMVVFQ2hNVVJYaGhiWEJzWlNCUGNtZGhibWw2WVhScApiMjR4RkRBU0Jn [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "Namespaced"
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system", "csi-driver-cacerts"]
    objectSelector:
      matchLabels:
        spiffe.io/spire-managed-identity: "true"
